--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ main {
     display: block;
     width: 100%;
     height: 3px;
-    background-color: var(--light-color);
+    background-color: var(--light-color), white;
     margin: 5px 0;
     transition: var(--transition);
     border-radius: 3px;
@@ -231,17 +231,12 @@ section {
     margin-bottom: 1.5rem;
 }
 
-.greeting {
-    color: var(--gray-color);
-    font-weight: 400;
-    font-size: 1.8rem;
-    display: block;
-    margin-bottom: 0.5rem;
-}
 
 .name-highlight {
     color: var(--primary-color);
     position: relative;
+    font-size: 6rem;
+
 }
 
 .name-highlight::after {
@@ -490,6 +485,14 @@ section {
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     position: relative;
     overflow: hidden;
+    padding: 0;
+
+    & img {
+        display: block;
+        object-fit: contain;
+        width: 100%;
+        object-position: center;
+    }
 }
 
 .project-overlay {
